--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,11 @@ repos:
   rev: 5.13.2
   hooks:
   - id: isort
+
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.86.0
+  hooks:
+  - id: terraform_checkov
+    args:
+    - --args=--directory terraform
+    - --args=--skip-check CKV_AWS_20,CKV_DOCKER_3,CKV_DOCKER_2,CKV_DOCKER_7,CKV_DOCKER_4,CKV2_AWS_40,CKV2_AWS_144,CKV2_AWS_145,CKV2_AWS_21,CKV2_AWS_34,CKV2_AWS_18,CKV2_AWS_6,CKV2_AWS_61,CKV2_AWS_337,CKV2_AWS_290,CKV2_AWS_62,CKV2_AWS_288,CKV2_AWS_286,CKV2_AWS_287,CKV2_AWS_289,CKV2_AWS_355,CKV2_AWS_63,CKV2_AWS_50,CKV2_AWS_116,CKV2_AWS_272,CKV2_AWS_144,CKV_AWS_145,CKV_AWS_21,CKV_AWS_18,CKV_AWS_337,CKV_AWS_40,CKV_AWS_290,CKV_AWS_288,CKV_AWS_286,CKV_AWS_287,CKV_AWS_289,CKV_AWS_355,CKV_AWS_63,CKV_AWS_50,CKV_AWS_116,CKV_AWS_144,CKV_AWS_62,CKV_AWS_272,CKV_AWS_115,CKV_AWS_117,CKV_AWS_173,CKV_AWS_115,CKV_AWS_173,CKV_AWS_136
