--- a/docker/Dockerfile.awslambda
+++ b/docker/Dockerfile.awslambda
@@ -1,12 +1,14 @@
-FROM root_base:latest
+ARG base_image
+FROM ${base_image}
 
-ENV EXPERIMENTAL_PATH=bindings/experimental/distrdf/python/DistRDF/Backends/AWS
 ENV TARGET_PATH=lib/root/DistRDF/Backends
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && \
     apt-get install --no-install-recommends --no-install-suggests -y \
         python3-boto3 \
     && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
+
 
 RUN python3 -m pip install awslambdaric --no-cache-dir
