--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,8 +1,10 @@
-ARG version=6.26.06-ubuntu22.04
-FROM rootproject/root:${version}
+ARG base_image=rootproject/root:6.26.06-ubuntu22.04
+FROM ${base_image}
+
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends --no-install-suggests -y \
+    apt-get install --no-install-recommends --no-install-suggests -y \
         python3-numpy \
         python3-cloudpickle \
         python3-pip \
@@ -10,6 +12,11 @@ RUN apt-get update -y && \
         krb5-user\
     && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
+
+
+# TODO: this should do the same and be much easier,
+#       but it causes whole system to break -> investigate
+#COPY AWS root/lib/DistRDF/Backends/AWS
 
 RUN git clone https://github.com/CloudPyRDF/root.git --progress --single-branch --branch distrdf-aws-vpadulan root_src && \
     cp -r root_src/bindings/experimental/distrdf/python/DistRDF/Backends/AWS root/lib/DistRDF/Backends/AWS && \
