--- a/functions/aws/worker/Dockerfile
+++ b/functions/aws/worker/Dockerfile
@@ -1,6 +1,8 @@
-FROM root_aws_lambda:latest
+ARG base_image=root_aws_lambda:latest
+FROM ${base_image}
 
-ADD --chmod=767 https://raw.githubusercontent.com/wlloyduw/SAAF/master/python_template/src/Inspector.py Inspector.py
+ADD https://raw.githubusercontent.com/wlloyduw/SAAF/master/python_template/src/Inspector.py Inspector.py
 
-COPY --chmod=777 lambda.py lambda.py
-COPY --chmod=777 monitor.py monitor.py
+COPY lambda.py lambda.py
+COPY monitor.py monitor.py
+RUN chmod 777 Inspector.py lambda.py monitor.py
